<resources>
    <string name="app_name">congenial telegram</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="create_an_account">Create an Account</string>
    <string name="name">Name</string>
    <string name="sign_in_instead">Sign in instead?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_verification_message">Please veriy your email and sign in</string>
    <string name="upload">UPLOAD</string>
    <string name="remove">REMOVE</string>
    <string name="back_to_dashboard">Back to Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tool_title">lorem ipsum dolor sit amet</string>
    <string name="tool_author">Lorem Ipsum</string>
    <string name="tool_date_time">Jan 1 at 2:00 AM</string>
    <string name="like">LIKE</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="tools_likes_comments">3 likes 2 comments</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="tool_following">3 Following</string>
    <string name="mobile">Mobile Number</string>
    <string name="about_me">About Me</string>
    <string name="update">UPDATE</string>
    <string name="update_cover_photo">UPDATE COVER PHOTO</string>
    <string name="update_profile_photo">UPDATE PROFILE PHOTO</string>
    <string name="write_something_here">Write Something Here...</string>
    <string name="upload_image">ADD IMAGE</string>
    <string name="post">POST</string>
    <string name="discard">DISCARD</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="users">Users</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="send">SEND</string>
    <string name="type_a_message">Type a message</string>
    <string name="channel_name">notify</string>
    <string name="channel_description">message</string>
</resources>
