<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="32dp"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="24sp"
        android:layout_marginEnd="24dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="28dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:gravity="end"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/updateButton"
            android:text="@string/update"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>


    </LinearLayout>

</LinearLayout>