<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    >
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp"
        >

        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:text="@string/tool_author" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="12sp"
                        tools:text="@string/tool_date_time" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                tools:text="@string/tool_title" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                tools:src="@tools:sample/avatars[4]" />

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                tools:text="@string/tools_likes_comments"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/like"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/like"/>

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/comment"/>

                <TextView
                    android:id="@+id/share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/share"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>