<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/coverPic"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/header" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/coverPic"
            android:layout_marginTop="-75dp"
            android:layout_centerHorizontal="true"
            tools:src="@drawable/profile_pic"
            app:civ_border_color="#BCffffff"
            app:civ_border_width="10dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePic"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:gravity="center"
            tools:text="@string/tool_author"/>

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_below="@+id/name"
            android:gravity="center"
            tools:text="@string/tool_title"/>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/about">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/followButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:src="@drawable/ic_person_add"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/messageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:src="@drawable/ic_chat"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_below="@+id/linearLayout2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/following"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                tools:text="@string/tool_following"/>

            <TextView
                android:id="@+id/followers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                tools:text="@string/tool_following"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_below="@+id/linearLayout"/>

    </RelativeLayout>

</ScrollView>